# translate-gemma-ui

./: CLAUDE.md  LICENSE  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
src/translate_gemma_ui/: __init__.py  device.py  glossary.py  srt_parser.py  srt_service.py  text_splitter.py  translate_service.py  translator.py  ui.py
tests/: conftest.py  test_device.py  test_glossary.py  test_smoke.py  test_srt_parser.py  test_srt_service.py  test_start_bat.py  test_text_splitter.py  test_translate_service.py  test_translator.py  test_ui.py
